WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70195
IE quirk for percentage size on a table element doesn't work with orthogonal writing modes
https://bugs.webkit.org/show_bug.cgi?id=70195
Summary
IE quirk for percentage size on a table element doesn't work with orthogonal ...
Ojan Vafai
Reported
2011-10-15 20:23:41 PDT
Created
attachment 111170
[details]
test case Summary: IE quirk for percentage size on a table element doesn't work with orthogonal writing modes See the test case. I traced our implementation of this quirk back to
http://trac.webkit.org/changeset/4316
. It's not clear to me from the patch what sites needed this quirk. My preference would be to remove this quirk entirely. Opera and Mozilla don't implement it and IE doesn't restrict this behavior to quirks mode like we do. We should at least restrict this quirk to horizontal writing mode only.
Attachments
test case
(1.58 KB, text/html)
2011-10-15 20:23 PDT
,
Ojan Vafai
no flags
Details
Patch
(8.25 KB, patch)
2011-10-15 20:35 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
Patch
(9.10 KB, patch)
2011-10-17 12:36 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
Patch
(89.98 KB, patch)
2011-10-17 13:50 PDT
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
Patch
(93.82 KB, patch)
2011-10-17 13:58 PDT
,
Ojan Vafai
eric
: review-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2011-10-15 20:25:27 PDT
Whoops. The comment in the test case is wrong. The 5th and 6th cases should render the same.
Ojan Vafai
Comment 2
2011-10-15 20:35:36 PDT
Created
attachment 111171
[details]
Patch
Dave Hyatt
Comment 3
2011-10-17 12:24:05 PDT
Comment on
attachment 111171
[details]
Patch r=me
Ojan Vafai
Comment 4
2011-10-17 12:36:32 PDT
Created
attachment 111302
[details]
Patch
WebKit Review Bot
Comment 5
2011-10-17 12:38:00 PDT
Attachment 111302
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Ojan Vafai
Comment 6
2011-10-17 13:50:12 PDT
Created
attachment 111316
[details]
Patch
WebKit Review Bot
Comment 7
2011-10-17 13:51:47 PDT
Attachment 111316
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource From git://git.webkit.org/WebKit 928c0b6..97d06fb master -> origin/master M Source/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def M Source/JavaScriptCore/ChangeLog M Source/JavaScriptCore/heap/MarkStack.cpp
r97644
= 97d06fbb7bef9a77fa9ed571cc0257fdcb46c87c (refs/remotes/trunk) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/trunk. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Ojan Vafai
Comment 8
2011-10-17 13:58:27 PDT
Created
attachment 111318
[details]
Patch
WebKit Review Bot
Comment 9
2011-10-17 14:04:12 PDT
Attachment 111318
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource From git://git.webkit.org/WebKit 97d06fb..466a1d4 master -> origin/master M ChangeLog M Source/cmake/OptionsEfl.cmake M Source/cmake/OptionsWinCE.cmake M Source/cmakeconfig.h.cmake
r97645
= 6f53a24aa712b42c281fd95c21c7eb35d0dd1d1b (refs/remotes/trunk) M Source/JavaScriptCore/ChangeLog M Source/JavaScriptCore/heap/HandleStack.cpp
r97646
= 466a1d4cba90e1f8e49868ee3d8ed4149e4b3f43 (refs/remotes/trunk) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/trunk. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 10
2012-01-05 11:53:52 PST
Comment on
attachment 111318
[details]
Patch Looks sane to me. If the other major browsers don't support this old Quirk, no reason we should still need to.
Ojan Vafai
Comment 11
2012-01-05 13:39:13 PST
Committed
r104208
: <
http://trac.webkit.org/changeset/104208
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug