IE quirk for percentage size on a table element doesn't work with orthogonal writing modes https://bugs.webkit.org/show_bug.cgi?id=70195

Reviewed by Eric Seidel.

Source/WebCore:

Remove this quirk entirely. Mozilla and Opera don't implement it and IE
doesn't restrict the quirk to standards mode. As it's unlikely for
webkit-only content to hit this quirk (e.g. use tables for layout),
it should be relatively safe to match Mozilla/Opera here.

Test: fast/writing-mode/table-percent-width-quirk.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeBlockPreferredLogicalWidths):

LayoutTests:

* fast/table/032.html:
* fast/writing-mode/table-percent-width-quirk-expected.png: Added.
* fast/writing-mode/table-percent-width-quirk-expected.txt: Added.
* fast/writing-mode/table-percent-width-quirk.html: Added.
* platform/mac/fast/table/032-expected.png:
* platform/mac/fast/table/032-expected.txt:
* platform/mac/tables/mozilla/bugs/bug55694-expected.png:
* platform/mac/tables/mozilla/bugs/bug55694-expected.txt:

Canonical link: https://commits.webkit.org/92444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104208 268f45cc-cd09-0410-ab3c-d52691b4dbfc